# experimentele_tools_package

./: .pypirc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/experimentele_tools_package/: datastorage.py  easyfit.py  easylatex.py  easystats.py
tests/: easyfit_test.py  easylatex_test.py  easystats_test.py
